<chore> GC Log 활성화